<resources>
    <string name="app_name">WaterFly</string>
    <string name="title_activity_driver">DriverActivity</string>
    <string name="title_activity_passenger">UserActivity</string>
    <string name="title_activity_ad_mob">MainActivity</string>
    <string name="action_settings">Settings</string>


    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="rate_us">Rates Us</string>

    <string name="ok">OK</string>
    <string name="you_are_sucessfully_logout">You are successfully logout.</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_really_want_to_logout">Do you really wants to Logout ?</string>
    <string name="key_shared_prefs">key_shared_prefs</string>
    <string name="key_user_type">key_user_type</string>
    <string name="water_fly">WaterFly</string>
</resources>